--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dev": "cross-env NODE_ENV=development nodemon pointograph.js",
     "prod": "cross-env NODE_ENV=production node pointograph.js",
     "test": "cross-env NODE_ENV=test jest --runInBand --detectOpenHandles --forceExit",
+    "test:endpoints": "npm run test -- endpoints",
     "lint": "eslint",
     "lint:fix": "eslint --fix"
   },
