--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "moment": "^2.26.0",
     "mongoose": "^5.9.17",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "open-location-code": "^1.0.3"
   }
 }
