--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.26.0",
+    "mongo-cursor-pagination": "^7.3.0",
     "mongoose": "^5.9.17",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
