--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "open-location-code": "^1.0.3",
+    "socket.io": "^2.3.0",
     "swagger-ui-express": "^4.1.4"
   }
 }
