--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "multer": "^1.4.2",
     "open-location-code": "^1.0.3",
     "socket.io": "^2.3.0",
-    "swagger-ui-express": "^4.1.4"
+    "swagger-ui-express": "^4.1.4",
+    "ws": "^7.3.1"
   }
 }
