--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "mongoose": "^5.9.17",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "node-cron": "^2.0.3",
     "open-location-code": "^1.0.3",
     "socket.io": "^2.3.0",
     "swagger-ui-express": "^4.1.4",
