--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "handlebars": "^4.7.6",
     "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
+    "jusibe": "^1.0.3",
     "lodash": "^4.17.15",
     "moment": "^2.26.0",
     "mongo-cursor-pagination": "^7.3.0",
