--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.2.4",
+    "axios": "^0.21.1",
     "bcrypt": "^4.0.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
@@ -48,6 +49,7 @@
     "multer": "^1.4.2",
     "node-cron": "^2.0.3",
     "open-location-code": "^1.0.3",
+    "qs": "^6.9.6",
     "socket.io": "^2.3.0",
     "swagger-ui-express": "^4.1.4",
     "ws": "^7.3.1"
